Start product detail menu

--- a/theme/snippets/jumplink-navigation.liquid
+++ b/theme/snippets/jumplink-navigation.liquid
@@ -129,7 +129,7 @@
         <li class="nav-item">
           <bs4-dropdown class="dropdown d-block">
             <a class="nav-link dropdown-toggle" data-offset="-350" rv-on-click="toggle" rv-on-route-active="'/cart'" href="#" role="button" id="dropdownMenuCart" aria-haspopup="true" aria-expanded="false">
-              Cart
+              Shopping Bag
             </a>
             
             <div class="dropdown-menu p-3 text-center" aria-labelledby="dropdownMenuCart" style="width: 400px;">
