--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -35,3 +35,13 @@
   width: 1em;
   height: 1em;
 }
+
+// Disable arrows in number field
+input[type=number]::-webkit-outer-spin-button, 
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
