[Component:ShopifyCart] remove, increase, decrease items in dropdown menu

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -9,3 +9,11 @@
 h1, .h1 {
   @extend .text-serif;
 }
+
+.text-normal {
+  text-decoration: none;
+}
+
+.text-underline {
+  text-decoration: underline;
+}
