--- a/src/scss/bundle.scss
+++ b/src/scss/bundle.scss
@@ -41,6 +41,6 @@
 @import 'templates/index';
 
 // components, binders and sections
-@import '../ts/components/index';
+@import '../ts/components/components';
 @import '../ts/binders/index';
 @import 'sections/index';
