--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -9,7 +9,7 @@
       MAINBAR LEFT
     {% endcomment %}
     <div class="col-auto pointer-events-all logo-text-lg">
-      <a rv-on-route-active="'/'" rv-route="'/'" href="/">FASSBENDER</a>
+      <a rv-route-class-active="'/'" rv-route="'/'" href="/">FASSBENDER</a>
     </div>
 
     {% comment %}
@@ -23,7 +23,7 @@
               class="nav-link"
               rv-class-active="link.active"
               rv-hide="link.url | eq '/account/login'"
-              rv-on-route-active="link.url"
+              rv-route-class-active="link.url"
               rv-route="link.url" rv-href="link.url"
             >{link.title}</a>
           </div>
@@ -46,7 +46,7 @@
             </bs4-dropdown>
           </div>
 
-          <a class="nav-item nav-link py-0 d-flex justify-content-center" rv-on-route-active="'/blogs/blog'" rv-route="'/blogs/blog'">
+          <a class="nav-item nav-link py-0 d-flex justify-content-center" rv-route-class-active="'/blogs/blog'" rv-route="'/blogs/blog'">
             <rv-icon class="cursor-pointer" rv-src="'{{ 'iconset-eye.svg' | asset_url }}'" height="26" width="26"></rv-icon>
           </a>
 
@@ -87,7 +87,7 @@
             </bs4-dropdown>
           </li>    
           <li class="nav-item">
-            <a class="nav-link" rv-on-route-active="'/pages/legal-area'" rv-route="'/pages/legal-area'" href="/pages/legal-area">
+            <a class="nav-link" rv-route-class-active="'/pages/legal-area'" rv-route="'/pages/legal-area'" href="/pages/legal-area">
               Legal Area
             </a>
           </li>
@@ -102,7 +102,7 @@
 {% comment %} footer smartphone {% endcomment %}
 <div class="container-fluid d-block d-lg-none bg-white fixed-bottom">
   <div class="row">
-    <a class="col d-flex justify-content-center py-2" rv-on-route-active="'/blogs/blog'" rv-route="'/blogs/blog'">
+    <a class="col d-flex justify-content-center py-2" rv-route-class-active="'/blogs/blog'" rv-route="'/blogs/blog'">
       <rv-icon class="cursor-pointer" rv-src="'{{ 'iconset-eye.svg' | asset_url }}'" height="32" width="32"></rv-icon>
     </a>
 
@@ -114,7 +114,7 @@
       <rv-icon href="#" class="cursor-pointer" rv-src="'{{ 'iconset-x.svg' | asset_url }}'" height="32" width="32"></rv-icon>
     </div>
 
-    <a class="col d-flex justify-content-center py-2" rv-on-route-active="'/cart'" rv-route="'/cart'" href="/cart">
+    <a class="col d-flex justify-content-center py-2" rv-route-class-active="'/cart'" rv-route="'/cart'" href="/cart">
       <rv-icon class="cursor-pointer" rv-src="'{{ 'iconset-shopping-bag.svg' | asset_url }}'" height="32" width="32"></rv-icon>
     </a>
   </div>
@@ -124,11 +124,11 @@
   <shopify-linklist class="" id="toggle-menu" name="toggle-menu" vertical="true" pills="false">
     <nav class="nav" rv-class="linklist.handle" rv-class-nav-pills="pills" rv-class-flex-column="vertical" rv-class-flex-row="vertical | not">
       <div class="nav-item" rv-each-link="linklist.links">
-        <a class="nav-link justify-content-center" rv-on-route-active="link.url" rv-route="link.url" rv-href="link.url">{link.title}</a>
+        <a class="nav-link justify-content-center" rv-route-class-active="link.url" rv-route="link.url" rv-href="link.url">{link.title}</a>
       </div>
     </nav>
   </shopify-linklist>
-  <a class="nav-link" href="/search" rv-on-route-active="'/search'" rv-route="'/search'">
+  <a class="nav-link" href="/search" rv-route-class-active="'/search'" rv-route="'/search'">
     <rv-icon rv-src="'{{ 'iconset-glass.svg' | asset_url }}'" size="32"></rv-icon>
   </a>
 </div>
