--- a/theme/snippets/jumplink-navigation.liquid
+++ b/theme/snippets/jumplink-navigation.liquid
@@ -29,7 +29,7 @@
     {% endcomment %}
     <div class="col-auto" style="position: fixed; width: auto; z-index: 1;">
       <div class="row">
-        <a class="col-auto brand pointer-events-all" rv-on-route-active="'/'" rv-route="'/'" href="/">
+        <a class="col-auto brand pointer-events-all" rv-route-class-active="'/'" rv-route="'/'" href="/">
           <rv-icon rv-src="'{{ 'iconset-logo.svg' | asset_url }}'" height="64" width="47"></rv-icon>
         </a>
       </div>
@@ -53,8 +53,8 @@
                 <strong>Type</strong>
                 <div class="nav-item" rv-each-sublink="link.links">
                   <div class="custom-control custom-radio">
-                    <input type="radio" rv-id="sublink.handle" rv-name="link.handle" rv-on-route-active="sublink.url" rv-route="sublink.url" rv-checked-on-route="sublink.url" class="custom-control-input">
-                    <label class="custom-control-label" rv-on-route-active="sublink.url" rv-route="sublink.url" rv-for="sublink.handle">{sublink.title}</label>
+                    <input type="radio" rv-id="sublink.handle" rv-name="link.handle" rv-route-class-active="sublink.url" rv-route="sublink.url" rv-checked-on-route="sublink.url" class="custom-control-input">
+                    <label class="custom-control-label" rv-route-class-active="sublink.url" rv-route="sublink.url" rv-for="sublink.handle">{sublink.title}</label>
                   </div>
                 </div>
 
@@ -68,13 +68,13 @@
                             id="{{ collection.handle }}"
                             rv-name="link.handle"
                             class="custom-control-input"
-                            rv-on-route-active="'{{ collection.url }}'"
+                            rv-route-class-active="'{{ collection.url }}'"
                             rv-route="'{{ collection.url }}'"
                           >
                           <label
                             class="custom-control-label"
                             rv-for="{{ collection.handle }}"
-                            rv-on-route-active="'{{ collection.url }}'"
+                            rv-route-class-active="'{{ collection.url }}'"
                             rv-route="'{{ collection.url }}'"
                           >{{ collection.title }}</label>
                         </div>
@@ -118,46 +118,15 @@
     <div class="ml-auto col-auto d-flex align-items-center">
       <ul class="nav" style="pointer-events: all;">
         <li class="nav-item">
-          <a class="nav-link" href="/search" rv-on-route-active="'/search'" rv-route="'/search'">
+          <a class="nav-link" href="/search" rv-route-class-active="'/search'" rv-route="'/search'">
             <rv-icon rv-src="'{{ 'iconset-glass.svg' | asset_url }}'" size="24"></rv-icon>
           </a>
         </li>
 
         <shopify-linklist rv-show="menuOpen" class="" id="toggle-menu" name="toggle-menu" vertical="false" pills="false"></shopify-linklist>
-        
 
         <li class="nav-item">
-          <rv-shopify-cart>
-            <div class="dropdown d-block">
-              <a class="nav-link dropdown-toggle" data-offset="-150" rv-on-click="toggle" rv-on-route-active="'/cart'" href="#" role="button" id="dropdownMenuCart" aria-haspopup="true" aria-expanded="false">
-                Shopping Bag <small class="ml-1" rv-text="cart.item_count" style="margin-top: -20px;"></small>
-              </a>
-              
-              <div class="dropdown-menu p-3 scrollbar-primary " aria-labelledby="dropdownMenuCart" style="width: 320px; max-height: 80vh; overflow-y: auto;">
-                
-                <ul class="list-unstyled">
-                  <li class="media mb-3" rv-each-item="cart.items">
-                    <img class="img-fluid mr-3" rv-src="item.image" rv-alt="item.title" style="max-width: 100px;">
-                    <div class="media-body">
-                      <strong rv-text="item.product_title"></strong>
-                      <p class="m-0" rv-each-option="item.variant_options" >
-                        <span rv-text="option"></span>
-                        <small class="text-muted">Change</small>
-                      </p>
-                      <p class="m-0">
-                        Quantity <span rv-text="item.quantity"></span>
-                      </p>
-                      <p rv-text="item.price | money '{{ shop.money_format }}'"></p>
-                    </div>
-                  </li>
-                  <strong><span rv-text="cart.item_count"></span> Items</strong>
-                  <p rv-text="cart.total_price | money '{{ shop.money_format }}'"></p>
-
-                </ul>
-              </div>
-            </div>
-          </rv-shopify-cart>
-
+          {% include 'jumplink-shopping-cart-dropdown' %}
         </li>    
         <li class="nav-item">
           <a class="nav-link" rv-on-click="assign | args 'menuOpen' true" href="#" rv-hide="menuOpen">
@@ -174,6 +143,6 @@
 
 {% comment %} Navigation Smartphone {% endcomment %}
 <div class="container-fluid fixed-top pointer-events-none d-block d-lg-none text-center logo-text-sm">
-  <a class="pointer-events-all" rv-on-route-active="'/'" rv-route="'/'" href="/">FASSBENDER</a>
+  <a class="pointer-events-all" rv-route-class-active="'/'" rv-route="'/'" href="/">FASSBENDER</a>
   
 </div>
