--- a/src/ts/components/_components.scss
+++ b/src/ts/components/_components.scss
@@ -1,6 +1,7 @@
 @import './shopify-linklist/shopify-linklist.component.scss';
 @import './shopify-filter/shopify-filter.component.scss';
 @import './shopify-cart/shopify-cart.component.scss';
+@import './shopify-login-form/shopify-login-form.component.scss';
 @import './icon/icon.component.scss';
 @import './newsletter/newsletter.component.scss';
 @import './instagram/instagram.component.scss';
