--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -104,7 +104,7 @@ $yiq-text-light:            $white !default;
 
 $enable-caret:              false;
 $enable-rounded:            false;
-$enable-shadows:            false !default;
+$enable-shadows:            false;
 $enable-gradients:          false !default;
 $enable-transitions:        true !default;
 $enable-hover-media-query:  false !default; // Deprecated, no longer affects any compiled CSS
